get data in the bronze folder , clean data and store it in silver folder , combine all matchs fles and all players files and store them in the gold folder , create a uml diagrame for the creating of the database , create the database with the tables , start insering data in the BD

--- a/getData.ipynb
+++ b/getData.ipynb
@@ -2,78 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "8b9d3c11",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scraping Liverpool...\n",
-      "get player table for Liverpool\n",
-      "get match table for Liverpool\n",
-      "Scraping Arsenal...\n",
-      "get player table for Arsenal\n",
-      "get match table for Arsenal\n",
-      "Scraping Manchester City...\n",
-      "get player table for Manchester City\n",
-      "get match table for Manchester City\n",
-      "Scraping Chelsea...\n",
-      "get player table for Chelsea\n",
-      "get match table for Chelsea\n",
-      "Scraping Newcastle Utd...\n",
-      "get player table for Newcastle Utd\n",
-      "get match table for Newcastle Utd\n",
-      "Scraping Aston Villa...\n",
-      "get player table for Aston Villa\n",
-      "get match table for Aston Villa\n",
-      "Scraping Nott'ham Forest...\n",
-      "get player table for Nott'ham Forest\n",
-      "get match table for Nott'ham Forest\n",
-      "Scraping Brighton...\n",
-      "get player table for Brighton\n",
-      "get match table for Brighton\n",
-      "Scraping Bournemouth...\n",
-      "get player table for Bournemouth\n",
-      "get match table for Bournemouth\n",
-      "Scraping Brentford...\n",
-      "get player table for Brentford\n",
-      "get match table for Brentford\n",
-      "Scraping Fulham...\n",
-      "get player table for Fulham\n",
-      "get match table for Fulham\n",
-      "Scraping Crystal Palace...\n",
-      "get player table for Crystal Palace\n",
-      "get match table for Crystal Palace\n",
-      "Scraping Everton...\n",
-      "get player table for Everton\n",
-      "get match table for Everton\n",
-      "Scraping West Ham...\n",
-      "get player table for West Ham\n",
-      "get match table for West Ham\n",
-      "Scraping Manchester Utd...\n",
-      "get player table for Manchester Utd\n",
-      "get match table for Manchester Utd\n",
-      "Scraping Wolves...\n",
-      "get player table for Wolves\n",
-      "get match table for Wolves\n",
-      "Scraping Tottenham...\n",
-      "get player table for Tottenham\n",
-      "get match table for Tottenham\n",
-      "Scraping Leicester City...\n",
-      "get player table for Leicester City\n",
-      "get match table for Leicester City\n",
-      "Scraping Ipswich Town...\n",
-      "get player table for Ipswich Town\n",
-      "get match table for Ipswich Town\n",
-      "Scraping Southampton...\n",
-      "get player table for Southampton\n",
-      "get match table for Southampton\n",
-      "Done. Teams scraped: ['Liverpool', 'Arsenal', 'Manchester City', 'Chelsea', 'Newcastle Utd', 'Aston Villa', \"Nott'ham Forest\", 'Brighton', 'Bournemouth', 'Brentford', 'Fulham', 'Crystal Palace', 'Everton', 'West Ham', 'Manchester Utd', 'Wolves', 'Tottenham', 'Leicester City', 'Ipswich Town', 'Southampton']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
@@ -92,6 +24,11 @@
     "teams_table = wait.until(EC.presence_of_element_located((By.ID, 'results2024-202591_overall')))\n",
     "teams = teams_table.find_elements(By.CSS_SELECTOR, 'tbody > tr > .left')\n",
     "\n",
+    "base_folder = \"Bronze\"\n",
+    "\n",
+    "if not os.path.exists(base_folder):\n",
+    "    os.makedirs(base_folder)\n",
+    "\n",
     "for i in range(len(teams)):\n",
     "    teams_table = wait.until(EC.presence_of_element_located((By.ID, 'results2024-202591_overall')))\n",
     "    teams = teams_table.find_elements(By.CSS_SELECTOR, 'tbody > tr > .left')\n",
@@ -101,20 +38,21 @@
     "    except:\n",
     "        continue\n",
     "\n",
-    "    print(f\"Scraping {link.text}...\")\n",
+    "    print(f\"Scraping {link.text}\")\n",
     "    driver.execute_script(\"arguments[0].scrollIntoView({block: 'center'});\", link)\n",
     "    time.sleep(0.5)\n",
     "    teams_names.append(link.text)\n",
     "\n",
-    "    folder_name = link.text.replace(\"/\", \"-\")  # avoid path errors\n",
+    "    folder_name = link.text.replace(\"/\", \"-\")  \n",
+    "    team_folder = os.path.join(base_folder, folder_name)\n",
     "    csv_file = f'{folder_name}_players.csv'\n",
     "    csv_file2 = f'{folder_name}_matchs.csv'\n",
     "\n",
-    "    if not os.path.exists(folder_name):\n",
-    "        os.makedirs(folder_name)\n",
+    "    if not os.path.exists(team_folder):\n",
+    "        os.makedirs(team_folder)\n",
     "\n",
-    "    csv_file_path = os.path.join(folder_name, csv_file)\n",
-    "    csv_file_path2 = os.path.join(folder_name, csv_file2)\n",
+    "    csv_file_path = os.path.join(team_folder, csv_file)\n",
+    "    csv_file_path2 = os.path.join(team_folder, csv_file2)\n",
     "\n",
     "    time.sleep(1)\n",
     "    link.click()\n",
@@ -125,13 +63,12 @@
     "    with open(csv_file_path, mode='w', newline='', encoding='utf-8') as file:\n",
     "        writer = csv.writer(file)\n",
     "\n",
-    "        # take only first 16 headers\n",
-    "        players_table_header = driver.find_elements(By.CSS_SELECTOR, '#stats_standard_9 > thead > tr > th')[:16]\n",
-    "        writer.writerow([h.text.strip() if h.text.strip() else \"-\" for h in players_table_header])\n",
+    "        players_table_header = driver.find_elements(By.CSS_SELECTOR, '#stats_standard_9 > thead > tr:not(.over_header) > th')[:16]\n",
+    "        writer.writerow([h.text.strip() for h in players_table_header])\n",
     "\n",
     "        rows = driver.find_elements(By.CSS_SELECTOR, '#stats_standard_9 > tbody > tr')\n",
     "        for row in rows:\n",
-    "            cells = [td.text.strip() if td.text.strip() else \"-\" for td in row.find_elements(By.CSS_SELECTOR, \"th, td\")[:16]]\n",
+    "            cells = [td.text.strip() for td in row.find_elements(By.CSS_SELECTOR, \"th, td\")[:16]]\n",
     "            writer.writerow(cells)\n",
     "\n",
     "    print(f\"get player table for {folder_name}\")\n",
@@ -141,7 +78,7 @@
     "        writer = csv.writer(file)\n",
     "\n",
     "        matchs_table_header = driver.find_elements(By.CSS_SELECTOR, '#matchlogs_for > thead > tr > th')[:18]\n",
-    "        writer.writerow([h.text.strip() if h.text.strip() else \"-\" for h in matchs_table_header])\n",
+    "        writer.writerow([h.text.strip() for h in matchs_table_header])\n",
     "\n",
     "        matchs_rows = driver.find_elements(By.CSS_SELECTOR, '#matchlogs_for > tbody > tr')\n",
     "        for tr in matchs_rows:\n",
@@ -155,8 +92,298 @@
     "    wait.until(EC.presence_of_element_located((By.ID, 'results2024-202591_overall')))\n",
     "    wait.until(EC.presence_of_all_elements_located((By.CSS_SELECTOR, 'tbody > tr > .left > a')))\n",
     "\n",
+    "with open(os.path.join(base_folder,'Teams.csv'), mode='w', newline='', encoding='utf-8') as file:\n",
+    "        writer = csv.writer(file)\n",
+    "        writer.writerow(['Team Name'])\n",
+    "        for team_name in teams_names:\n",
+    "            writer.writerow([team_name])\n",
+    "\n",
     "driver.quit()\n",
     "print('Done. Teams scraped:', teams_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87489f92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import re\n",
+    "\n",
+    "silver_folder = \"Silver\"\n",
+    "\n",
+    "if not os.path.exists(silver_folder):\n",
+    "    os.makedirs(silver_folder)  \n",
+    "\n",
+    "teams_file = os.path.join(\"Bronze\", \"Teams.csv\")\n",
+    "teams_df = pd.read_csv(teams_file)   \n",
+    "\n",
+    "\n",
+    "def clean_player_dataframe(df):\n",
+    "\n",
+    "    players = df[~df['Pos'].astype(str).str.contains('Playing Time', na=False)].copy()\n",
+    "    players = players[players['Player'] != 'Player']\n",
+    "\n",
+    "    for col in ['Min']:\n",
+    "        players[col] = (\n",
+    "            players[col]\n",
+    "            .astype(str)\n",
+    "            .str.replace(\",\", \"\", regex=False)\n",
+    "            .replace(\"nan\", np.nan)\n",
+    "        )\n",
+    "\n",
+    "    numeric_cols = ['Age','MP','Starts','Min','90s','Gls','Ast','G+A','G-PK','PK','PKatt','CrdY','CrdR']\n",
+    "    for col in numeric_cols:\n",
+    "        players[col] = pd.to_numeric(players[col], errors='coerce')\n",
+    "\n",
+    "    players['Nation'] = players['Nation'].astype(str).str.extract(r'([A-Z]{3})')\n",
+    "\n",
+    "    players[['Pos', 'Secondary_Pos']] = (players['Pos'].astype(str).str.split(pat=',', n=1, expand=True)\n",
+    ")\n",
+    "\n",
+    "    players['Pos'] = players['Pos'].str.strip()\n",
+    "    players['Secondary_Pos'] = players['Secondary_Pos'].str.strip()\n",
+    "\n",
+    "    players[numeric_cols] = players[numeric_cols].fillna(0)\n",
+    "\n",
+    "    return players\n",
+    "\n",
+    "def extract_penalty(value):\n",
+    "\n",
+    "    if pd.isna(value) or str(value).strip() == \"\":\n",
+    "        return (np.nan, 0)\n",
+    "    m = re.match(r\"(\\d+)\\s*\\((\\d+)\\)\", str(value))\n",
+    "    if m:\n",
+    "        return (int(m.group(1)), int(m.group(2)))\n",
+    "    else:\n",
+    "        num = re.match(r\"^\\d+$\", str(value))\n",
+    "        return (int(num.group(0)), 0) if num else (np.nan, 0)\n",
+    "\n",
+    "\n",
+    "def extract_time(value):\n",
+    "    text = str(value).strip()\n",
+    "    text = re.sub(r\"\\(\\d{1,2}:\\d{2}\\)\", \"\", text).strip()\n",
+    "\n",
+    "    match = re.search(r\"\\b(\\d{1,2}:\\d{2})\\b\", text)\n",
+    "    return match.group(1) if match else np.nan\n",
+    "\n",
+    "def clean_match_dataframe(df):\n",
+    "    matches = df[df['Date'] != 'Date'].copy()\n",
+    "\n",
+    "    replace_teams = {\n",
+    "        'it Inter': 'Inter Milan',\n",
+    "        'sk Slovan Bratislava': 'Slovan Bratislava',\n",
+    "        'cz Sparta Prague': 'Sparta Prague',\n",
+    "        'pt Sporting CP': 'Sporting CP',\n",
+    "        'nl Feyenoord': 'Feyenoord',\n",
+    "        'es Real Madrid': 'Real Madrid',\n",
+    "        'fr Paris S-G': 'Paris Saint-Germain'\n",
+    "    }\n",
+    "    matches['Opponent'] = matches['Opponent'].replace(replace_teams)\n",
+    "\n",
+    "    matches['Attendance'] = (\n",
+    "        matches['Attendance'].astype(str).str.replace(\",\", \"\").astype(float)\n",
+    "    )\n",
+    "\n",
+    "    matches[['GF', 'GF_Pen']] = matches['GF'].apply(lambda x: pd.Series(extract_penalty(x)))\n",
+    "    matches[['GA', 'GA_Pen']] = matches['GA'].apply(lambda x: pd.Series(extract_penalty(x)))\n",
+    "\n",
+    "    for col in ['GF', 'GA', 'GF_Pen', 'GA_Pen']:\n",
+    "        matches[col] = pd.to_numeric(matches[col], errors='coerce').fillna(0).astype(int)\n",
+    "\n",
+    "    matches['Formation'] = matches['Formation'].astype(str).str.replace(\"◆\", \"\")\n",
+    "    matches['Opp Formation'] = matches['Opp Formation'].astype(str).str.replace(\"◆\", \"\")\n",
+    "\n",
+    "    matches['Time'] = matches['Time'].apply(extract_time)\n",
+    "\n",
+    "    matches['Result'] = matches['Result'].str.strip().replace({\n",
+    "        'W': 'Victoire',\n",
+    "        'L': 'Défaite',\n",
+    "        'D': 'Nul',\n",
+    "        'Win': 'Victoire',\n",
+    "        'Loss': 'Défaite',\n",
+    "        'Draw': 'Nul'\n",
+    "    })\n",
+    "\n",
+    "    for col in ['xG', 'xGA', 'Poss']:\n",
+    "        matches[col] = pd.to_numeric(matches[col], errors='coerce')\n",
+    "\n",
+    "    return matches\n",
+    "\n",
+    "\n",
+    "for team_name in teams_df['Team Name']:\n",
+    "    team_folder = os.path.join(\"Bronze\", team_name)\n",
+    "    silver_team_folder = os.path.join(silver_folder, team_name)\n",
+    "\n",
+    "    if not os.path.exists(silver_team_folder):\n",
+    "        os.makedirs(silver_team_folder)\n",
+    "\n",
+    "    player_file = os.path.join(team_folder, f\"{team_name}_players.csv\")\n",
+    "    match_file = os.path.join(team_folder, f\"{team_name}_matchs.csv\")\n",
+    "\n",
+    "    if os.path.exists(player_file):\n",
+    "        players_df = pd.read_csv(player_file)\n",
+    "        players_clean = clean_player_dataframe(players_df)\n",
+    "        players_clean.to_csv(os.path.join(silver_team_folder, \"players_clean.csv\"), index=False)\n",
+    "        print(f\"Cleaned player data for {team_name}\")\n",
+    "    \n",
+    "    if os.path.exists(match_file):\n",
+    "        matchs_df = pd.read_csv(match_file)\n",
+    "        matchs_clean = clean_match_dataframe(matchs_df)\n",
+    "        matchs_clean.to_csv(os.path.join(silver_team_folder, \"matchs_clean.csv\"), index=False)\n",
+    "        print(f\"Cleaned match data for {team_name}\")\n",
+    "\n",
+    "print(\"Data transformation completed.\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab8ed893",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gold_folder = \"Gold\"\n",
+    "\n",
+    "if not os.path.exists(gold_folder):\n",
+    "    os.makedirs(gold_folder)\n",
+    "\n",
+    "all_players = []\n",
+    "all_matches = []\n",
+    "\n",
+    "for team_name in os.listdir(silver_folder):\n",
+    "    team_folder = os.path.join(silver_folder, team_name)\n",
+    "    if not os.path.isdir(team_folder):\n",
+    "        continue \n",
+    "\n",
+    "    players_path = os.path.join(team_folder, \"players_clean.csv\")\n",
+    "    matchs_path = os.path.join(team_folder, \"matchs_clean.csv\")\n",
+    "\n",
+    "    if os.path.exists(players_path):\n",
+    "        df_players = pd.read_csv(players_path)\n",
+    "        df_players[\"Team\"] = team_name  \n",
+    "        all_players.append(df_players)\n",
+    "\n",
+    "    if os.path.exists(matchs_path):\n",
+    "        df_matchs = pd.read_csv(matchs_path)\n",
+    "        df_matchs[\"Team\"] = team_name \n",
+    "        all_matches.append(df_matchs)\n",
+    "\n",
+    "players_gold = pd.concat(all_players, ignore_index=True)\n",
+    "matchs_gold = pd.concat(all_matches, ignore_index=True)\n",
+    "players_gold.to_csv(os.path.join(gold_folder, \"players_gold.csv\"), index=False)\n",
+    "matchs_gold.to_csv(os.path.join(gold_folder, \"matchs_gold.csv\"), index=False)\n",
+    "\n",
+    "print(\"Gold CSVs created\")\n",
+    "\n",
+    "\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5704827",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine,MetaData, Table, Column, Integer, VARCHAR, TIMESTAMP, ForeignKey, Enum\n",
+    "\n",
+    "connection_string = f\"postgresql://postgres:123@localhost:5432/Football\"\n",
+    "engine = create_engine(connection_string)\n",
+    "\n",
+    "metadata = MetaData()\n",
+    "\n",
+    "\n",
+    "competition = Table('competition',\n",
+    "    metadata,\n",
+    "    Column('id_competition', Integer, primary_key=True, autoincrement=True),\n",
+    "    Column('nomcompetition', VARCHAR)\n",
+    ")\n",
+    "\n",
+    "saison = Table('saison',\n",
+    "    metadata,\n",
+    "    Column('id_saison', Integer, primary_key=True, autoincrement=True),\n",
+    "    Column('annee', Integer)\n",
+    ")\n",
+    "\n",
+    "equipe = Table('equipe',\n",
+    "    metadata,\n",
+    "    Column('id_equipe', Integer, primary_key=True, autoincrement=True),\n",
+    "    Column('nom_equipe', VARCHAR)\n",
+    ")\n",
+    "\n",
+    "joueur = Table('joueur',\n",
+    "    metadata,\n",
+    "    Column('id_joueur', Integer, primary_key=True, autoincrement=True),\n",
+    "    Column('nom_joueur', VARCHAR),\n",
+    "    Column('position', VARCHAR),\n",
+    "    Column('nationalite', VARCHAR),\n",
+    "    Column('id_equipe', ForeignKey('equipe.id_equipe'))\n",
+    ")\n",
+    "\n",
+    "match_ = Table('match',\n",
+    "    metadata,\n",
+    "    Column('id_match', Integer, primary_key=True, autoincrement=True),\n",
+    "    Column('date_match', TIMESTAMP),\n",
+    "    Column('heure', VARCHAR),\n",
+    "    Column('round', VARCHAR),\n",
+    "    Column('venue', VARCHAR),\n",
+    "    Column('id_team_home', ForeignKey('equipe.id_equipe')),\n",
+    "    Column('id_team_away', ForeignKey('equipe.id_equipe')),\n",
+    "    Column('id_competition', ForeignKey('competition.id_competition')),\n",
+    "    Column('id_saison', ForeignKey('saison.id_saison'))\n",
+    ")\n",
+    "\n",
+    "resultatmatch = Table('resultat_match',\n",
+    "    metadata,\n",
+    "    Column('id_resultat', Integer, primary_key=True, autoincrement=True),\n",
+    "    Column('id_match', ForeignKey('match.id_match')),\n",
+    "    Column('id_equipe', ForeignKey('equipe.id_equipe')),\n",
+    "    Column('buts_marques', Integer),\n",
+    "    Column('buts_concedes', Integer),\n",
+    "    Column('resultat', Enum('Victoire', 'Défaite', 'Nul', name='resultat_enum'))\n",
+    ")\n",
+    "\n",
+    "statistiquejoueur = Table('statistique_joueur',\n",
+    "    metadata,\n",
+    "    Column('id_stats', Integer, primary_key=True, autoincrement=True),\n",
+    "    Column('id_joueur', ForeignKey('joueur.id_joueur')),\n",
+    "    Column('buts', Integer),\n",
+    "    Column('passes_decisives', Integer),\n",
+    "    Column('nb_matches_played', Integer),\n",
+    "    Column('cartons_jaunes', Integer),\n",
+    "    Column('cartons_rouges', Integer)\n",
+    ")\n",
+    "\n",
+    "metadata.create_all(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4cb68b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import insert\n",
+    "\n",
+    "players_df = pd.read_csv(\"Gold/players_gold.csv\")\n",
+    "matches_df = pd.read_csv(\"Gold/matchs_gold.csv\")\n",
+    "\n",
+    "teams = players_df['Team'].unique()\n",
+    "\n",
+    "for team_name in teams:\n",
+    "    with engine.begin() as conn:\n",
+    "        conn.execute(\n",
+    "            insert(equipe),[\n",
+    "                {\"nom_equipe\" : team_name},\n",
+    "                ]\n",
+    "                    )\n"
    ]
   }
  ],
